Update WhatsApp number for appointment sharing

--- a/index.html
+++ b/index.html
@@ -297,6 +297,10 @@ footer{
                 <label for="appointmentDateTime">Date & Time</label>
                 <input id="appointmentDateTime" name="datetime" type="datetime-local" required>
             </div>
+            <div>
+                <label for="contactNumber">Contact Number</label>
+                <input id="contactNumber" name="contact" type="tel" placeholder="Eg. +91XXXXXXXXXX" required>
+            </div>
             <div class="full">
                 <label for="appointmentType">Appointment</label>
                 <input id="appointmentType" name="appointment" type="text" placeholder="Eg. MRI Scan" required>
@@ -327,11 +331,11 @@ footer{
 
 <div class="float-wrap">
     <a href="tel:+91XXXXXXXXXX" class="float-btn call">📞 Call Now</a>
-    <a href="https://wa.me/91XXXXXXXXXX" target="_blank" class="float-btn whatsapp">💬 WhatsApp</a>
+    <a href="https://wa.me/919518937958" target="_blank" class="float-btn whatsapp">💬 WhatsApp</a>
 </div>
 
 <script>
-const STORAGE_KEY = "radiovisionAppointments";
+const WHATSAPP_NUMBER = "919518937958";
 
 function openDrawer(){
     document.getElementById("drawer").classList.add("active");
@@ -342,19 +346,15 @@ function closeDrawer(){
     document.getElementById("overlay").classList.remove("active");
 }
 
-function loadAppointments(){
-    return JSON.parse(localStorage.getItem(STORAGE_KEY) || "[]");
-}
-
-function saveAppointments(rows){
-    localStorage.setItem(STORAGE_KEY, JSON.stringify(rows));
-}
-
-function exportAppointmentsToExcel(rows){
-    const worksheet = XLSX.utils.json_to_sheet(rows);
-    const workbook = XLSX.utils.book_new();
-    XLSX.utils.book_append_sheet(workbook, worksheet, "Appointments");
-    XLSX.writeFile(workbook, "appointments.xlsx");
+function buildWhatsAppMessage(entry){
+    return [
+        "*New Appointment Request*",
+        `Name: ${entry.Name}`,
+        `Date & Time: ${entry.DateTime}`,
+        `Contact Number: ${entry.Contact}`,
+        `Appointment: ${entry.Appointment}`,
+        `Remark: ${entry.Remark || "N/A"}`
+    ].join("\n");
 }
 
 document.getElementById("appointmentForm").addEventListener("submit", function(event){
@@ -364,20 +364,19 @@ document.getElementById("appointmentForm").addEventListener("submit", function(e
     const entry = {
         Name: formData.get("name"),
         DateTime: formData.get("datetime"),
+        Contact: formData.get("contact"),
         Appointment: formData.get("appointment"),
         Remark: formData.get("remark")
     };
 
-    const appointments = loadAppointments();
-    appointments.push(entry);
-    saveAppointments(appointments);
-    exportAppointmentsToExcel(appointments);
+    const message = encodeURIComponent(buildWhatsAppMessage(entry));
+    const whatsappUrl = `https://wa.me/${WHATSAPP_NUMBER}?text=${message}`;
 
-    document.getElementById("bookingStatus").textContent = "Appointment booked and saved to appointments.xlsx";
+    window.open(whatsappUrl, "_blank");
+    document.getElementById("bookingStatus").textContent = "Appointment details sent to WhatsApp.";
     event.target.reset();
 });
 </script>
-<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
 </body>
 </html>
